--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
           weather details you need.<br />
           This is just the beginning, and I'm excited to continue enhancing the
           app with new features and improvements in the future.<br />
-          Stay tuned for updates and thank you for using our app!
+          Stay tuned for updates and thank you for using my app!
         </p>
       </div>
     </div>
